# hmod

./: Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml
examples/: cosine_coefficients_of_step_function.py  function_to_ngsolve.py  legendre_rhs_projection.py  sine_coefficients_of_hat_function.py  sine_coefficients_of_step_function.py  sparsity_patterns.py
python/benchmarks/: old_vs_new_implementation.py
python/hmod/: __init__.py  block_operations.py  deprecated_hilbert_matrices.py  dof_handling.py  hilbert_matrices.py  matrix_tools.py  non_linear_operators.py  norms.py  polynomial_bases.py  preconditioning.py  standard_matrices.py  transformations.py
python/tests/: test_all.py  test_block_operator.py  test_bpx_matrices.py  test_h12_seminorm.py  test_hilbert_matrices.py  test_hilbert_matrices_old.py  test_inverse_csr_mult.py  test_legendre_evaluator.py  test_legendre_prolongation.py  test_preconditioner.py  test_rhs_projection.py  test_rhs_quadrature.py  test_standard_matrices.py
python/tests/integration_tests/: bochner_mass_non_constant_coeff_convergence.py  bochner_only_ode_convergence.py  bpx_test.py  hilbert_only_ode_convergence.py  hilbert_only_ode_non_constant_coeff_convergence.py  hybrid_ode_convergence.py  standard_mass_convergence.py
src/: hilbert_kernel.rs  lib.rs  norms.rs  preconditioning.rs
src/piecewise_polynomials/: mod.rs
src/transformations/: degree_dependent_transformations.rs  extension_matrices.rs  j_matrices.rs  mod.rs  sparse_matrix_tools.rs
src/transformations/fft/: dct_tests.rs  dst_tests.rs  mod.rs
