[package]
name = "hmod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hmod"
crate-type = ["cdylib"]

[dependencies]
approx = "0.5.1"
nalgebra = "0.34.1"
nalgebra-sparse = "0.11.0"
ndarray = "0.16.1"
pyo3 = "0.27.1"
rayon = "1.11.0"
rustdct = "0.7.1"
scirs2-special = "0.1.5"
sparse = "0.1.2"
