[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "hmodFFT"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]


dependencies = [
    "matplotlib>=3.5",
    "numpy>=2.3.5",
    "scipy>=1.10",
    "numba>=0.62",
    #"pypardiso>=0.4",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "ngsolve>=6.2",
    #"hilbertwrapper @ git+https://gitlab.tugraz.at/applied_math/modified_hilbert_transformation.git", #install this manually for tests, as it cannot be published to pypi
]


[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
